--- a/CastleRun.html
+++ b/CastleRun.html
@@ -10,9 +10,13 @@
 </head>
 <body>
     <div class="container">
+
+        <p class="centro"></p>
+        <img src="./img/clouds2.png" class="clouds">
         <img src="./img/boyAtt.gif" class="girl">
         <img src="./img/bat1.gif" class="bat">
-        <img src="./img/sceneAtt.png" id="scene">
+        <img src="./img/sceneAtt.png" id="scene"> 
+        
     </div>
 </body>
 </html>
