--- a/CastleRun.html
+++ b/CastleRun.html
@@ -15,8 +15,11 @@
         <img src="./img/clouds2.png" class="clouds">
         <img src="./img/boyAtt.gif" class="girl">
         <img src="./img/bat1.gif" class="bat">
-        <img src="./img/sceneAtt.png" id="scene"> 
+        <button type="button" class="buttonMusic"><img src="./img/song.png"></button>
+        <input type="range" class="volume"></input>
+        <audio src="./audio/Anitek.mp3" autoplay class="song"></audio>
         
+        <img src="./img/sceneAtt.png" id="scene">
     </div>
 </body>
 </html>
